test-cases/negative/test_122_missing_operator_between.lay
# negative test: missing operator between expressions
# expected: parser should reject this

the variable x of type Number is 15


